--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -24,7 +24,7 @@ jobs:
         if: github.event_name != 'pull_request'
         uses: sigstore/cosign-installer@v3.5.0
         with:
-          cosign-release: main
+          cosign-release: v2.2.4
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
       - name: Log into registry ${{ env.REGISTRY }}
