--- a/.github/workflows/image-publish.yml
+++ b/.github/workflows/image-publish.yml
@@ -39,6 +39,7 @@ jobs:
         uses: docker/metadata-action@v5
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          flavor: latest=true
       - name: Build and push Docker image
         id: build-and-push
         uses: docker/build-push-action@v5
